Fix double border by removing left border on AJAX dropdown

--- a/css/includes/components/_select2.scss
+++ b/css/includes/components/_select2.scss
@@ -257,6 +257,7 @@
         .select2-selection {
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
+            border-left: 0;
         }
     }
 }
